<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pastelDark"
        android:orientation="vertical"
        tools:context=".SetScheduleActivity">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/pastel"
            android:hint="@string/input_title"
            android:textColorHint="@color/white"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/pastel"
            android:text="@string/input_date"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppTheme.View.NumberPickerStyle"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/pastel"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/pastel"
            android:textColorHint="@color/white"
            android:hint="@string/input_category"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <EditText
            android:id="@+id/gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/pastel"
            android:textColorHint="@color/white"
            android:hint="@string/input_gift"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/pastel"
            android:textColorHint="@color/white"
            android:hint="@string/input_location"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/pastel"
            android:text="@string/alarm"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.View.NumberPickerStyle"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/pastel"
            android:timePickerMode="spinner" />

        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="15dp"
            android:background="@color/pastel"
            android:gravity="start"
            android:textColorHint="@color/white"
            android:hint="@string/memo"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="12pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/pastel"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:paddingRight="10dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12pt" />

    </LinearLayout>
</ScrollView>